# mjnax

./: .gitignore  README.md  pendulum.ipynb  pyproject.toml  requirements.txt  setup.py
example/: cem.py  linearization.ipynb
mjnax/: mjxenv.py  pendulum.py  render.py
mjnax/assets/: cartpole.xml  humonoid.xml  pendulum.xml  pusher.xml  scene.xml  swimmer.xml
